[package]
name = "ed25519-test-vectors"
version = "0.1.0"
edition = "2024"

[dependencies]
curve25519-dalek = "4.1.3"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
ed25519-consensus = "2.1.0"
ed25519-dalek = { version = "2.1", features = ["digest"] }
ed25519-zebra = "4.0"
ed25519-zebra-v1 = { package = "ed25519-zebra", version = "=1.0.0" }
ring = "0.17"
sodiumoxide = "0.2"
ed25519-compact = "2.1"
